Fixed: Words wrap

--- a/frontend/src/app/pages/message/components/main-message/main-message.component.scss
+++ b/frontend/src/app/pages/message/components/main-message/main-message.component.scss
@@ -5,7 +5,7 @@
     background: #242526;
 }
 ::-webkit-scrollbar-thumb {
-    background: rgb(221, 221, 221);
+    background: rgb(133, 133, 133);
     border-radius: 40px;
 }
 textarea:focus,
@@ -27,4 +27,10 @@ textarea {
 }
 #message-body {
     scroll-behavior: smooth;
+}
+.emoji-mart-preview {
+    @apply tw-hidden;
+}
+#message {
+    word-break: break-word;
 }
