--- a/frontend/src/app/pages/message/components/room/room.component.scss
+++ b/frontend/src/app/pages/message/components/room/room.component.scss
@@ -5,7 +5,7 @@
     background: #242526;
 }
 ::-webkit-scrollbar-thumb {
-    background: rgb(221, 221, 221);
+    background: rgb(133, 133, 133);
     border-radius: 40px;
 }
 textarea:focus,
