--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -1,11 +1,11 @@
-@import 'tailwindcss/base';
-@import 'tailwindcss/components';
-@import 'tailwindcss/utilities';
+@import "tailwindcss/base";
+@import "tailwindcss/components";
+@import "tailwindcss/utilities";
 /* You can add global styles to this file, and also import other style files */
 @import "~font-awesome/css/font-awesome.css";
 
 body {
-  font-family: 'Roboto', sans-serif;
+  font-family: "Roboto", sans-serif;
 }
 
 /* Importing Bootstrap SCSS file. */
@@ -23,4 +23,4 @@ body {
 @import "~angular-notifier/styles/types/type-warning.css";
 @import "~angular-notifier/styles/themes/theme-material.css";
 
-@import '~@ctrl/ngx-emoji-mart/picker';
+@import "~@ctrl/ngx-emoji-mart/picker";
